TypedLama/regression/positive/test002.lama
import Std;

-- we cannot specify function parameter type, because of pattern-matching sugar
public fun id (x : Int) {
  x
}

-- instead, we should annotate type of function in postfix notation
public fun idTyped (x) :: Int -> Int {
  x
}

public fun kCombinatorTyped (x, y) :: Int, String -> Int {
  x
}

-- but how we would still type pattern-matching?
-- Answer: we should infer type!
public fun id2 (Abc (x, y)) :: ? {
  x
}


write(idTyped(4));
write(id2(Abc(3, 5)))
